added some styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Library</title>
   </head>
   <body>
-    <h1>Library</h1>
+    <h1>The Library App</h1>
     <h2><small>by</small> Stefan Dili and Rajkumar Das</h2>
     <div class="my-library"></div>
     <script src="app.js"></script>
